# annotato-leaderboard

./: Cargo.toml
frontend/: .babelrc  package.json  tsconfig.json
frontend/src/: App.tsx
src/: main.rs
