[package]
name = "annotato-chart-race"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
color-eyre = "0.6.2"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["fs"] }
tower-http = { version = "0.5.0", features = ["fs"] }
